# aws_customer_crud

./: .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  codex.yaml  config.yaml  pyproject.toml  requirements.txt  setup.sh  version.md
data/: test_customers.json
docs/: aws-single-table-crud-python.md
e2e/: run_e2e.py  test_requests.http
iac/: main.tf  outputs.tf  step_functions.tf  variables.tf
iac/terraform/: main.tf  output.tf  variables.tf
schema/: customer_domain.json
src/: app.py  batch_loader.py  models.py  utils.py
tests/: test_app.py  test_main_tf.py  test_models.py  test_step_functions_tf.py
